# colorsegmentation

./: CMakeLists.txt  README.md
cmake/: arch.cmake  compiler.cmake  func_macro.cmake  options.cmake  svn_external.cmake
minsubsystem/: CMakeLists.txt  minbase_revision.txt  mingeo_revision.txt  minimgapi_revision.txt  minimgio_revision.txt  minutils_revision.txt
minsubsystem/minbase/: CMakeLists.txt  changelog.txt  crossplat.h  half.hpp  macro_helpers.h  mingeo.h  minimg.h  minresult.h  mintyp.h
minsubsystem/minbase/doc/: license.txt  minbase.dox
minsubsystem/minbase/src/: gcc_warnings.h
minsubsystem/mingeo/: CMakeLists.txt  changelog.txt  mingeo.h
minsubsystem/mingeo/doc/: license.txt  mingeo.dox
minsubsystem/minimgapi/: CMakeLists.txt  changelog.txt  imgguard.hpp  license.txt  minimgapi-helpers.hpp  minimgapi-inl.h  minimgapi.h
minsubsystem/minimgapi/doc/: license.txt  minimgapi.dox
minsubsystem/minimgapi/src/: bitcpy.cpp  bitcpy.h  copy_channels.cpp  minimgapi.cpp  resample.cpp  transpose.cpp
minsubsystem/minimgapi/src/vector/: copy_channels-inl.h  transpose-inl.h
minsubsystem/minimgapi/src/vector/neon/: copy_channels-inl.h  transpose-inl.h
minsubsystem/minimgapi/src/vector/sse/: copy_channels-inl.h  transpose-inl.h
minsubsystem/minimgapi/test/: test_internal_transpose.cpp  test_minimgapi.cpp
minsubsystem/minimgio/: CMakeLists.txt  contrib.h  define.h  device.h  license.txt  minimgio.h
minsubsystem/minimgio/doc/: minimgio.dox
minsubsystem/minimgio/src/: avfoundationdevice.h  avfoundationdevice.mm  avfoundationsubsystem.h  avfoundationsubsystem.mm  avfoundationutils.h  camstream.cpp  camstream.h  contrib.cpp  device.cpp  dshowdevice.cpp  dshowdevice.h  dshowsubsystem.cpp  dshowsubsystem.h  dshowutils.cpp  dshowutils.h  minimgio.cpp  minimgiodev_go.cpp  minimgiodevice.cpp  minimgiodevice.h  minimgiojpeg.cpp  minimgiojpeg.h  minimgiolst.cpp  minimgiolst.h  minimgiopng.cpp  minimgiopng.h  minimgiotiff.cpp  minimgiotiff.h  minimgiowebp.cpp  minimgiowebp.h  pack.cpp  pack.h  stream.h  subsystem.cpp  subsystem.h  utils.cpp  utils.h  v4l2device.cpp  v4l2device.h  v4l2subsystem.cpp  v4l2subsystem.h  (+2 more)
minsubsystem/minimgio/test/: common.hpp  quantile_diff.hpp  test_interface.cpp  test_jpeg.cpp  test_png.cpp  test_tiff.cpp
minsubsystem/minutils/: CMakeLists.txt  license.txt  lifetime.h  listfile.h  mathoper.h  minarr.h  minhelpers.h  minlog.h  pathname.h  report.h  residuals.h  smartptr.h  stdint-doc.h  stdint-vc.h  string_scanner.hpp  timeprofile.h  timer.h
minsubsystem/minutils/doc/: license.txt  minutils.dox
minsubsystem/minutils/src/: minutils.cpp
testdata/remseg/ref/1/: cmd
testdata/remseg/ref/2/: cmd
testdata/remseg/ref/3/: cmd  remseg.rank0.1000_0000.json  remseg.rank1.10.0010_0000.json
testdata/remseg/ref/3/1/: remseg.rank0.1500_0000.json  remseg.rank1.0.0000_0000.json
testdata/remseg/ref/3/2/: remseg.rank1.43.0010_0000.json
vi_packages/: CMakeLists.txt  i8r_revision.txt  json-utils_revision.txt  mximg_revision.txt  remseg_revision.txt  validate_json_revision.txt  vi_cvt_revision.txt
vi_packages/colorseg/: CMakeLists.txt  README.md  color_vertex.h
vi_packages/colorseg/demo/: colorseg_go.cpp  obtain_blocklist.cpp
vi_packages/colorseg/doc/: license.txt
vi_packages/colorseg/include/colorseg/: color_distance_func.h  color_vertex.h  color_weight_func.h  colorspace_homography.hpp  colorspace_transform.h
vi_packages/colorseg/src/: color_distance_func.cpp  color_vertex.cpp  color_weight_func.cpp
vi_packages/i8r/: CMakeLists.txt
vi_packages/i8r/demo/: i8r_demo.cpp
vi_packages/i8r/doc/: license.txt
vi_packages/i8r/include/i8r/: i8r.h  thirdparty_fwd.h  types.h
vi_packages/i8r/src/: derived_logger.h  disabled_image_writer.h  disabled_logger.h  draw_utils.h  environment.cpp  environment.h  i8r.cpp  image_converter.cpp  image_converter.h  image_dir_writer.h  image_group.h  image_writer.h  logger_impl.cpp  logger_impl.h  utils.cpp  utils.h  video_writer.h
vi_packages/i8r/testdata/: config.json
vi_packages/json-utils/: CMakeLists.txt
vi_packages/json-utils/include/json-utils/: boost-convert.h  cv-convert.h  eigen-convert.h  features-convert.h  json-convert.h  min-convert.h  ros-convert.h  wstring-convert.h
vi_packages/mximg/: CMakeLists.txt
vi_packages/mximg/include/mximg/: image.h  ocv.h
vi_packages/mximg/src/: image.cpp
vi_packages/remseg/: CMakeLists.txt  README.md  edge_heap.h  image_map.h
vi_packages/remseg/demo/: remseg_go.cpp
vi_packages/remseg/doc/: license.txt
vi_packages/remseg/include/remseg/: distance_func.h  image.h  image_map.h  segmentator.hpp  utils.h  vertex.h  weight_func.h
vi_packages/remseg/src/: distance_func.cpp  edge_heap.cpp  image.cpp  image_map.cpp  utils.cpp  vertex.cpp  weight_func.cpp
vi_packages/validate_json/: CMakeLists.txt
vi_packages/validate_json/include/validate_json/: validate_json.h
vi_packages/validate_json/src/: validate_json.cpp
vi_packages/vi_cvt/: CMakeLists.txt
vi_packages/vi_cvt/vi_cvt/boost/: geometry.hpp
vi_packages/vi_cvt/vi_cvt/ocv/: color.hpp  geometry.hpp  image.hpp
vi_packages/vi_cvt/vi_cvt/qt/: geometry.hpp  image.hpp
vi_packages/vi_cvt/vi_cvt/ros/: geometry_msgs.hpp  sensor_msgs.hpp  std_msgs.hpp  tf2.hpp
vi_packages/vi_cvt/vi_cvt/std/: color.hpp  exception_macros.hpp  exceptions.hpp  image.hpp
