svn_external(DIR remseg URL https://vis.iitp.ru/svn/vi/packages/remseg/trunk@12445)
svn_external(DIR i8r URL https://vis.iitp.ru/svn/vi/packages/i8r/trunk@11338)
svn_external(DIR json-utils URL https://vis.iitp.ru/svn/vi/packages/json-utils/trunk@11713)
svn_external(DIR validate_json URL https://vis.iitp.ru/svn/vi/packages/validate_json/trunk@11314)
svn_external(DIR vi_cvt URL https://vis.iitp.ru/svn/vi/packages/vi_cvt/trunk@11968)

add_subdirectory(colorseg)